2024-05-30: testing contact form 3

--- a/_includes/contact-form.html
+++ b/_includes/contact-form.html
@@ -3,8 +3,7 @@
   method="POST"
 >
   <label>
-    Your email:
-    <input type="email" name="email">
+    <input type="email" name="email" placeholder="Your email address (required)" required>
   </label>
   <p></p>
   <label>
